<resources>
    <string name="app_name">Project1</string>
    <string name="spiice">Spiice</string>
    <string name="discover_the_platform">Discover the platform</string>
    <string name="you_have_an_account_log_in">You have an account ? <b>Log-in</b></string>
    <string name="skip">Skip</string>
    <string name="find_projects_from_companies_everywhere_in_the_word">Find projects from companies \neverywhere in the word</string>
    <string name="make_money_while_working_on_awesome_projects">Make money while working \non awesome projects</string>
    <string name="chat_with_others_freelancers">Chat with others freelancers  \nand develop your network</string>
    <string name="work_hard_and_level_up">Work hard and level up!</string>
    <string name="enjoy_your_progress">Enjoy your progress!</string>
    <string name="log_in">Log-in</string>
    <string name="sign_up">Sign-up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="return_to_sign_up">Return to Sign-up</string>
    <string name="text_error_on_emptiness">Обязательное поле</string>
    <string name="message_valid">Вы успешно вошли!</string>
    <string name="not_valid_email_format">Неправильный формат</string>
    <string name="text_error_by_number_characters_in_name">Кол-во символов должно быть от 3 до 255</string>
    <string name="text_error_by_number_characters_in_password">Кол-во символов должно быть от 6 до 50</string>
    <string name="text_error_password_one_big_letter">Должна быть одна большая буква</string>
    <string name="text_error_password_one_small_letter">Должна быть одна маленькая буква</string>
    <string name="text_error_password_one_digit">Должна быть одна цифра</string>
    <string name="text_error_password_one_char">Должен быть один символ</string>
    <string name="text_error_email_incorrect_format">Неправильный формат адреса</string>
    <string name="add_note">Add note</string>
    <string name="title">Title</string>
    <string name="title_calendar">Выберите дату</string>
    <string name="title_delete_note">Удалить заметку</string>
    <string name="share_note">Поделиться заметкой через</string>
    <string name="message">Message</string>
    <string name="add">Add</string>
    <string name="add_new">Add new</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="negative_button_cancel">Cancel</string>
    <string name="positive_button_delete">Delete</string>
    <string name="positive_button_exit">Exit</string>
    <string name="not_scheduled">Не запланирована</string>
    <string name="name_note">Название заметки:</string>
    <string name="content_note">Содержание заметки:</string>
    <string name="date_of_creation">Дата создания:</string>
    <string name="scheduled_for">Запланирова на:</string>
    <string name="expired_note">- истекший срок заметки</string>
    <string name="scheduled_for_current_date">- запланирована на текущую дату</string>
    <string name="scheduled_for_future_date">- запланирована на будущую дату</string>
    <string name="note_not_scheduled">- заметка не запланирована</string>
    <string name="all_notes">All notes</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="user_name">User name</string>
    <string name="notes_count">Notes count</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="filters">Filters</string>
    <string name="logout_of_profile_dialog">Выйти из профиля?</string>
    <string name="delete_all_notes_dialog">Удалить все заметки?</string>
    <string name="zero_notes">0 notes</string>
    <string name="text_error_with_maximum_of_50_characters">Поле должно содержать максимум 50 символов</string>
    <string name="text_error_with_maximum_of_140_characters">Поле должно содержать максимум 140 символов</string>
    <string name="filter_by_title">по заголовку</string>
    <string name="filter_by_date_of_creation">по дате создания</string>
    <string name="filter_by_schedule_date">по дате планирования</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="delete_profile_dialog">Удалить профиль?</string>
    <string name="registration_is_successful">Регистрация прошла успешно!</string>
    <string name="user_with_this_email_is_already_registered">Пользователь с таким email уже зарегистрирован!</string>
    <string name="incorrect_login_or_password">Неправильный логин или пароль</string>
    <string name="user_is_not_registered_please_register">Пользователь не зарегестрирован! \nПожалуйста, зарегистрируйтесь!</string>
    <string name="one_note">note</string>
    <string name="not_one_note">notes</string>
    <string name="profile_deleted">Профиль удален!</string>
</resources>