<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/listNotes"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/all_notes" />
    <item
        android:id="@+id/searchNote"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/addNote"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_note_add_24"
        android:title="@string/add_note" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile" />
</menu>