<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_notes_profile">

    <TextView
        style="@style/TextNoteProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_56"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        style="@style/TextUserNameProfile"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_130"
        android:ellipsize="end"
        android:maxLines="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/user_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDeleteProfile"
        style="@style/ButtonProfile"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/delete_profile"
        app:layout_constraintBottom_toBottomOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userName" />

    <TextView
        android:id="@+id/notesCount"
        style="@style/TextNoteCountProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:text="@string/notes_count" />

    <TextView
        android:id="@+id/deleteAllNotes"
        style="@style/TextNoteDateAndDeleteAllNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:stateListAnimator="@drawable/animation_text"
        android:text="@string/delete_all_notes"
        app:layout_constraintBottom_toBottomOf="@+id/notesCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/notesCount" />

    <TextView
        android:id="@+id/logout"
        style="@style/TextLogoutProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="29dp"
        android:stateListAnimator="@drawable/animation_text"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesCount" />

</androidx.constraintlayout.widget.ConstraintLayout>