<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bubbles6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skip5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_15"
            android:fontFamily="@font/public_sans_bold"
            android:text="@string/skip"
            android:textColor="@color/color_text"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_11"
            android:fontFamily="@font/red_hat_display"
            android:text="@string/spiice"
            android:textColor="@color/color_text"
            android:textSize="@dimen/sp_32"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_60"
            android:src="@drawable/image_heart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans_bold"
            android:layout_marginTop="@dimen/dp_140"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="@string/enjoy_your_progress"
            android:textColor="@color/color_text"
            android:textSize="@dimen/sp_18" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_32"
            android:scaleType="centerCrop"
            android:src="@drawable/diaporama5" />

    </LinearLayout>

</FrameLayout>