<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noteItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp_8"
    android:layout_marginVertical="@dimen/dp_4"
    android:orientation="vertical"
    android:padding="@dimen/dp_8"
    android:stateListAnimator="@animator/animation_item_note">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_8">

        <TextView
            android:id="@+id/titleItem"
            style="@style/TextNoteTitle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/dateOfCreationItem"
            style="@style/TextNoteDateAndDeleteAllNote"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            tools:text="@string/date_format" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_8">

        <TextView
            android:id="@+id/messageItem"
            style="@style/TextNoteMessage"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_11"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_weight="10"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/message" />

        <ImageView
            android:id="@+id/infoItem"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_weight="1"
            android:gravity="end"
            android:src="@drawable/ic_baseline_info_24"
            android:stateListAnimator="@animator/animation_icon"
            tools:ignore="UseAppTint" />

    </LinearLayout>

</LinearLayout>