<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_bubbles_step2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skip_step2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/public_sans_bold"
            android:text="@string/skip"
            android:textColor="@color/text"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_11"
            android:fontFamily="@font/red_hat_display"
            android:text="@string/spiice"
            android:textColor="@color/text"
            android:textSize="@dimen/sp_32"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_100"
            android:scaleType="centerCrop"
            android:src="@drawable/image_planet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_27"
            android:fontFamily="@font/public_sans_bold"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="@string/find_projects_from_companies_everywhere_in_the_word"
            android:textColor="@color/text"
            android:textSize="@dimen/sp_18" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_32"
            android:scaleType="centerCrop"
            android:src="@drawable/diaporama_step2" />

    </LinearLayout>

</FrameLayout>